log
Fri Mar 18 14:15:00 UTC 2022: 
 tests:  0|6
total_score: 0/70
dc200e4
Fri Mar 18 14:33:47 UTC 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:3: error: expected ‘,’ or ‘;’ before ‘list’
   list->head=NULL;
   ^~~~
Compilation failed
824b013
Fri Mar 18 14:34:37 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8ec1fac
Fri Mar 18 14:48:48 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:11: error: ‘List {aka struct List}’ has no member named ‘first’
   if(!list->first){
           ^~
list.c:43:21: error: ‘List {aka struct List}’ has no member named ‘first’
   list->current=list->first;
                     ^~
list.c:44:14: error: ‘List {aka struct List}’ has no member named ‘first’
   return(list->first->data);
              ^~
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
6a62521
Fri Mar 18 14:50:17 UTC 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
c165cbb
Fri Mar 18 14:59:14 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
c4a648f
Fri Mar 18 15:00:15 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:48:18: error: expected ‘)’ before ‘!’ token
   if(!list->head !! !list->tail){
                  ^
Compilation failed
485195d
Fri Mar 18 15:00:27 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ad7f6a9
Fri Mar 18 15:04:15 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
18bd9bf
Fri Mar 18 15:05:12 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘lastList’:
list.c:61:1: error: expected ‘;’ before ‘}’ token
 }
 ^
Compilation failed
6c8093a
Fri Mar 18 15:05:19 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
bf50edf
Fri Mar 18 15:06:48 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
5bb2b1e
Fri Mar 18 15:08:33 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
adcc618
Fri Mar 18 15:09:51 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
2b1e66b
Fri Mar 18 15:11:47 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
868bf80
Fri Mar 18 15:11:59 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
fac4635
Fri Mar 18 15:13:57 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9eb7dd4
Fri Mar 18 15:15:22 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:48:36: error: expected expression before ‘||’ token
   if(!list->head || !list->tail || || !list->current){
                                    ^~
Compilation failed
8cc5181
Fri Mar 18 15:15:28 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5424581
Fri Mar 18 15:16:28 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2a517bd
Fri Mar 18 15:17:03 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
72a2bb6
